--- a/index.html
+++ b/index.html
@@ -11,32 +11,9 @@
 <!-- php -S 127.0.0.1:8000 -->
  <!-- php -S 0.0.0.0:8000 -->
   <body>
-    <h1>User Information Form</h1>
-      <form action="php/process-form.php" method="post">
-        <label for="emp_firstname">First Name</label>
-        <input type="text" id="emp_firstname" name="emp_firstname">
-
-        <label for="emp_lastname">Last Name</label>
-        <input type="text" id="emp_lastname" name="emp_lastname">
-
-        <label for="emp_email">Email</label>
-        <input type="text" id="emp_email" name="emp_email">
-
-        <label for="emp_phonenum">Phone Number</label>
-        <input type="text" id="emp_phonenum" name="emp_phonenum">
-
-        <label for="emp_passwordhash">Password</label>
-        <input type="password" id="emp_passwordhash" name="emp_passwordhash">
-
-        <label>
-          <input type="checkbox" name="terms">
-          I agree to the terms and conditions
-        </label>
-
-        <br>
-        <button type="submit">Send</button>
-      </form>
-      <div><a href="get.html">link text</a></div>
+    <h1>Home Page</h1>
+    <div><a href="get.html">Get Form</a></div>
+    <div><a href="empInfoForm.html">Employee Info Form</a></div>
   </body>
 
   
