--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <!-- php -S 0.0.0.0:8000 -->
   <body>
     <h1>Home Page</h1>
-    <div><a href="get.html">Get Form</a></div>
+    <div><a href="get.html">Search Form</a></div>
     <div><a href="empInfoForm.html">Employee Info Form</a></div>
   </body>
 
