--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
  <!-- php -S 0.0.0.0:8000 -->
   <body>
     <h1>Home Page</h1>
-    <div><a href="get.html">Search Form</a></div>
-    <div><a href="empInfoForm.html">Employee Info Form</a></div>
+    <div><a href="pages/get.html">Search Form</a></div>
+    <div><a href="pages/empInfoForm.html">Employee Info Form</a></div>
+    <div><a href="pages/empList.html">Employee List</a></div>
+    <br><br>
+    <div><a href="adminPages/admin.html">Admin Page</a></div>
   </body>
 
   
