--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
   </head>
 
-<!-- php -S 127.0.0.1:8000 -->
- <!-- php -S 0.0.0.0:8000 -->
+<!-- php -S 127.0.0.1:8000 THIS RUNS ON LOCAL-->
+ <!-- php -S 0.0.0.0:8000  THIS RUNS ON VPN SERVER-->
   <body>
     <h1>Home Page</h1>
     <div><a href="loginpage/pages/get.html">Search Form</a></div>
