Eddited HTML page and created CSS page

--- a/face-auth-client/index.html
+++ b/face-auth-client/index.html
@@ -1,11 +1,15 @@
 <!doctype html>
 <html>
 <head>
+  <head>
   <meta charset="utf-8" />
-  <title>Face Auth Demo</title>
+  <title>Security Facial Authentication</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
 </head>
 <body>
-  <h1>Face Auth Demo</h1>
+  <h1>Security Facial Authentication</h1>
   <video id="video" width="320" height="240" autoplay muted></video>
   <button id="captureBtn">Capture & Verify</button>
   <script defer src="https://unpkg.com/face-api.js@0.22.2/dist/face-api.min.js"></script>
