--- a/indexNick.html
+++ b/indexNick.html
@@ -11,7 +11,9 @@
 <!-- php -S 127.0.0.1:8000 THIS RUNS ON LOCAL-->
  <!-- php -S 0.0.0.0:8000  THIS RUNS ON VPN SERVER-->
   <body>
-    <h1>Home Page</h1>
+    <h1>Employee Page</h1>
+    <div><a href="loginpage/userlogin/userlogin.html">User Login (Move Later)</a></div>
+    <br><br>
     <div><a href="loginpage/pages/get.html">Search Form</a></div>
     <div><a href="loginpage/pages/empInfoForm.html">Employee Info Form</a></div>
     <div><a href="loginpage/pages/empList.html">Employee List</a></div>
