--- a/loginpage/adminPages/admin.html
+++ b/loginpage/adminPages/admin.html
@@ -13,6 +13,7 @@
         <h1>Admin Page</h1>
     </div>
     <div>
+        <p><a href="elevateUsertoEmp.html">Elevate User to Employee</a></p>
         <p><a href="elevatePriv.html">Elevate Employee Privileges</a></p>
         <p><a href="adminList.html">List Admins</a></p>
         <p><a href="../../index.html">Back to Home</a></p>
