--- a/loginpage/pages/empInfoForm.html
+++ b/loginpage/pages/empInfoForm.html
@@ -11,7 +11,7 @@
 <!-- php -S 127.0.0.1:8000 -->
  <!-- php -S 0.0.0.0:8000 -->
   <body>
-    <h1>Employee Information Form</h1>
+    <h1>User Information Form</h1>
       <form action="php/process-form.php" method="post">
         <label for="emp_firstname">First Name</label>
         <input type="text" id="emp_firstname" name="emp_firstname">
