--- a/loginpage/userlogin/userlogin.html
+++ b/loginpage/userlogin/userlogin.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
   </head>
 
@@ -29,6 +28,8 @@
     <button type="submit">Sign in</button>
     
   </form>
+      <div><a href="../../index.html">Home Page</a></div>
+      <div><a href="../adminPages/admin.html">Admin Page</a></div>
 
   </body>
 
