--- a/daianaFolder/New folder/index.html
+++ b/daianaFolder/New folder/index.html
@@ -264,6 +264,58 @@
       panels.forEach(p=>p.classList.remove('active'));
       document.getElementById(id).classList.add('active');
     });
-  </script>
+    /*AI WIDGET SCRIPT*/
+    const chat = document.getElementById('ai-chat');
+    const toggle = document.getElementById('ai-chat-toggle');
+    const closeBtn = document.getElementById('ai-chat-close');
+    const form = document.getElementById('ai-chat-form');
+    const input = document.getElementById('ai-chat-input');
+    const messages = document.getElementById('ai-chat-messages');
+
+    toggle.addEventListener('click', () => chat.classList.toggle('open'));
+  closeBtn.addEventListener('click', () => chat.classList.remove('open'));
+     
+    function addMessage (text, who='bot',extras={}){
+      const div = document.createElement('div');
+      div.className = `msg ${who}` + ( extras.thinking ? 'thinking': '');
+      div.textContent =text;
+      messages.appendChild(div);
+      messages.scrollTop = messages.scrollHeight;
+      return div;
+    }
+async function sendToAS(question)  {
+  const res = await fetch('/api/chat',{
+    method:'POST',
+    headers: {'content-Type': 'application/json'},
+    body: JSON.stringify({
+    messages: [
+      {roles:'user',content: question}
+    ]  
+    })
+  })
+  if(!res.ok) throw new Error('Chat request failed');
+  const data = await res.json();
+  return data.reply;
+
+}
+fomr.addEventListener('submit', async (e) =>{
+  e.preventDefault();
+  const q = (input.value || '').trim();
+  if (!q) return;
+  addMessage(q,'user');
+  input.value = '';
+
+  const thinking = addMessage('Thinking...', 'bot',{thinking:true});
+  try{
+    const answer = await sendToAI(q);
+    thinking.remove();
+    addMessage(answer, 'bot');
+  }catch (err) {
+    thinking.remove();
+    addMessage('sorry-something went wrong.Please try again.', 'bot');
+    console.error(err);
+  }
+  } );
+</script>
 </body>
 </html>
