--- a/daianaFolder/New folder/empList.html
+++ b/daianaFolder/New folder/empList.html
@@ -13,12 +13,13 @@
       <h1>Employee Information</h1>
 
       <form action="php/listemps.php" method="get">
-        <button type="submit">Retrieve</button>
+        <input type="submit" name="listemps" value="listemps">
       </form>
 
       <br><br><br>
 
-      <p><a href="../../index.html">Back to Home</a></p>
+      <p><a href="index.php">Back to Home</a></p>
+      <p><a href="admin.php">Admin</a></p>
     </div>
   </body>
 </html>
