--- a/userpages/empInfoForm.html
+++ b/userpages/empInfoForm.html
@@ -12,7 +12,7 @@
  <!-- php -S 0.0.0.0:8000 -->
   <body>
     <h1>User Information Form</h1>
-      <form action="php/process-form.php" method="post">
+      <form action="../php/process-form.php" method="post">
         <label for="emp_firstname">First Name</label>
         <input type="text" id="emp_firstname" name="emp_firstname">
 
@@ -37,7 +37,8 @@
         <button type="submit">Send</button>
       </form>
       <div><a href="get.html">Go to Search</a></div>
-      <p><a href="../../index.html">Back to Home</a></p>
+      <p><a href="index.php">Back to Home</a></p>
+      <p><a href="admin.php">Admin</a></p>
   </body>
   </body>
 
