--- a/html/adminList.html
+++ b/html/adminList.html
@@ -12,14 +12,14 @@
     <div>
       <h1>Employee Information</h1>
 
-      <form action="php/adminListGet.php" method="get">
+      <form action="../php/adminListGet.php" method="get">
         <button type="submit">Retrieve</button>
       </form>
 
       <br><br><br>
       
-      <p><a href="admin.html">Admin Home</a></p>
-      <p><a href="../../index.html">Back to Home</a></p>
+      <p><a href="admin.php">Admin Home</a></p>
+      <p><a href="../index.php">Back to Home</a></p>
     </div>
   </body>
 </html>
