--- a/html/elevatePriv.html
+++ b/html/elevatePriv.html
@@ -14,7 +14,7 @@
     </div>
 
     <div>
-        <form action="php/adminElevatePriv.php" method="post">
+        <form action="../php/adminElevatePriv.php" method="post">
         <label for="emp_id">Employee ID</label>
         <input type="text" id="emp_id" name="emp_id">
 
@@ -29,8 +29,8 @@
     </div>
 
     <div>
-        <p><a href="admin.php">Admin Home</a></p>
-        <p><a href="index.php">Back to Home</a></p>
+        <p><a href="../admin.php">Admin Home</a></p>
+        <p><a href="../index.php">Back to Home</a></p>
     </div>
 
   </body>
