--- a/html/elevateUsertoEmp.html
+++ b/html/elevateUsertoEmp.html
@@ -14,7 +14,7 @@
 </div>
 
     <div>
-    <form action="php/rolechange.php" method="post">
+    <form action="../php/rolechange.php" method="post">
     <label for="emp_id">User ID</label>
     <input type="text" id="emp_id" name="emp_id">
 
