--- a/html/empList.html
+++ b/html/empList.html
@@ -12,14 +12,14 @@
     <div>
       <h1>Employee Information</h1>
 
-      <form action="php/listemps.php" method="get">
+      <form action="../php/listemps.php" method="get">
         <input type="submit" name="listemps" value="listemps">
       </form>
 
       <br><br><br>
 
-      <p><a href="index.php">Back to Home</a></p>
-      <p><a href="admin.php">Admin</a></p>
+      <p><a href="../index.php">Back to Home</a></p>
+      <p><a href="../admin.php">Admin</a></p>
     </div>
   </body>
 </html>
