--- a/html/get.html
+++ b/html/get.html
@@ -12,7 +12,7 @@
   <body>
     <h1>Employee Information</h1>
 
-      <form action="php/infoget.php" method="post">
+      <form action="../php/infoget.php" method="post">
         <label for="emp_id">Search Employee ID</label>
         <input type="text" id="emp_id" name="emp_id">
         <button type="submit">Send</button>
@@ -21,7 +21,7 @@
       <br>
       <br>
       <br>
-      <p><a href="index.php">Back to Home</a></p>
-      <p><a href="admin.php">Admin</a></p>
+      <p><a href="../index.php">Back to Home</a></p>
+      <p><a href="../admin.php">Admin</a></p>
   </body>
 </html>
